# ml-notebooks

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: quickstart-cgap17.yaml  rdf_OO.csv  water.yaml
notebooks/: MB-potential-gaussian-process-regression.ipynb  MB-potential-neural-network.ipynb  MNIST-train.ipynb  gaussian-process-regression.ipynb  graph-pes-quickstart.ipynb  graph-pes-water.ipynb  mnist_loader.py  network.py
src/: MB-potential.ipynb  graph-pes-quickstart.ipynb  mnist_loader.py  network.py  train.ipynb
