[project]
name = "ml-notebooks"
version = "0.1.0"
description = "A collection of machine learning-related Jupyter notebooks for educational purposes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "plotly>=6.3.1",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]
